@@ -13,7 +13,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
--  mapwfs.c: Genrate possibly an error message when applying filter encoding (#2444)
+- maputil.c: Correct expression evaluation with text containing apostrophes (#2641)
+
+- mapwfs.c: Genrate possibly an error message when applying filter encoding (#2444)
 
 - Added MS_LABEL_BINDING constants for SWIG MapScript (#2643)
 
